--- a/project/templates/material-dashboard/parciais/_head.html
+++ b/project/templates/material-dashboard/parciais/_head.html
@@ -40,3 +40,9 @@
 <script src="https://kit.fontawesome.com/6a0809fc5a.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="{% static '/material-dashboard/js/htmx.min.js' %}" defer></script>
+
+
+<!-- DATA TABLES -->
+<link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.css" />
+  
+<script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.js"></script>
