--- a/project/templates/material-dashboard/parciais/_plugin.html
+++ b/project/templates/material-dashboard/parciais/_plugin.html
@@ -19,10 +19,10 @@
     <hr class="horizontal dark my-1">
     <div class="card-body pt-sm-3 pt-0">
       {% if user.is_authenticated %}
-        <a href="{% url 'projeto:usuario_show' user.id %}" class="btn btn-info btn mb-2 w-100">
+        <a {% comment %} href="{% url 'projeto:usuario_show' user.id %}" {% endcomment %} class="btn btn-info btn mb-2 w-100">
           <span class="material-icons">account_box</span> Perfil
         </a>
-        <a href="{% url 'logout'%}?next={{request.path}}" class="btn btn-primary btn mb-2 w-100">
+        <a {% comment %} href="{% url 'logout'%}?next={{request.path}}" {% endcomment %} class="btn btn-primary btn mb-2 w-100">
           <span class="material-icons">logout</span> Sair
         </a>
       {% endif %}
