--- a/project/templates/product/show.html
+++ b/project/templates/product/show.html
@@ -10,7 +10,7 @@
                         <h6 class="text-white ps-3">Produtos</h6>
                     </div>
                     <div class="col-6 text-end pe-4">
-                        <a hx-get="{% url 'create_product' %}" hx-target=".product" hx-trigger="click" class="btn bg-gradient-dark"><span class="material-icons">add</span>Novo Produto</a>
+                        <a hx-get="{% url 'create_product_page' %}" hx-target=".product" hx-trigger="click" class="btn bg-gradient-dark"><span class="material-icons">add</span>Novo Produto</a>
                     </div>
                 </div>
             </div>
