--- a/project/templates/product/create.html
+++ b/project/templates/product/create.html
@@ -1,11 +1,107 @@
-<div class="row">
-    <div class="col-md-4">
-        <div class="card">
-            <div class="card_bordy">
-                <h4 class="card_title">
-                    <form action="" method="post"></form>
-                </h4>
+<div class="row my-2">
+    <div class="col-12">
+      <div class="card my-4">
+        <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
+            <div class="bg-gradient-info shadow-info border-radius-lg pt-4 pb-3">
+                <div class="row">
+                    <div class="col-6 d-flex align-items-center">
+                        <h6 class="text-white ps-3">Produtos / Criar</h6>
+                    </div>
+                    <div class="col-6 text-end pe-4">
+                        <a hx-get="{% url 'create_product_page' %}" hx-target=".product" hx-trigger="click" class="btn bg-gradient-dark"><span class="material-icons">add</span>Novo Produto</a>
+                    </div>
+                </div>
             </div>
+        </div>
+        <div class="card-body">
+            <form>
+                {% csrf_token %}
+
+                <div class="row">
+                    <div class="col-lg-2">
+                        <div class="input-group input-group-static mb-4">
+                            <label class="form-label">Nome</label>
+                            {{ form.name }}
+                        </div>
+                    </div>
+                    <div class="col-lg-2">
+                        <div class="input-group input-group-static mb-4">
+                            <label class="form-label">Numero CAS</label>
+                            {{ form.cas_number }}
+                        </div>
+                    </div>
+                    <div class="col-lg-2">
+                        <div class="input-group input-group-static mb-4">
+                            <label class="form-label">Preço de Compra</label>
+                            {{ form.purch_price }}
+                        </div>
+                    </div>
+                    <div class="col-lg-2">
+                        <div class="input-group input-group-static mb-4">
+                            <label class="form-label">Código de Compra</label>
+                            {{ form.purch_cod }}
+                        </div>
+                    </div>
+                    <div class="col-lg-2">
+                        <div class="input-group input-group-static mb-4">
+                            <label class="form-label">Preço de Venda</label>
+                            {{ form.sell_price }}
+                        </div>
+                    </div>
+                    <div class="col-lg-2">
+                        <div class="input-group input-group-static mb-4">
+                            <label class="form-label">Código de Venda</label>
+                            {{ form.sell_cod }}
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="input-group input-group-static mb-4">
+                            <label class="form-label">Descrição</label>
+                            {{ form.description }}
+                        </div>
+                    </div>
+                    <div class="col-lg-2">
+                        <div class="input-group input-group-static mb-4">
+                            <label class="form-label">Marca</label>
+                            {{ form.brand }}
+                        </div>
+                    </div>
+                    <div class="col-lg-2">
+                        <div class="input-group input-group-static mb-4">
+                            <label class="form-label">Tipo do Produto</label>
+                            {{ form.product_type }}
+                        </div>
+                    </div>
+                    <div class="col-lg-2">
+                        <div class="input-group input-group-static mb-4">
+                            <label class="form-label">Fornecedor</label>
+                            {{ form.supplier }}
+                        </div>
+                    </div>
+
+
+                    <div class="row">
+                        <div class="col-sm-1 me-md-0">
+                            <button hx-post="{% url 'create_product' %}" hx-target="#save_response" type="submit" class="btn btn-info">Salvar</button>
+                        </div>
+                        <div class="col-sm-1 me-md-0">
+                            <a href="" class="btn btn-primary">Cancelar</a>
+                        </div>
+                        <div class="col-sm-4">
+                            <a href="#" data-bs-toggle="modal" data-bs-target="#modal-criar" style="margin-right: 10px;">
+                                <button class="btn btn-success me-2">
+                                    Cadastrar Novo Fornecedor
+                                </button>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <div id="save_response">
         </div>
     </div>
 </div>
+    
