--- a/project/templates/product/show.html
+++ b/project/templates/product/show.html
@@ -16,86 +16,21 @@
             </div>
         </div>
         <div class="card-body px-0 pb-2">
-            <div class="table-responsive p-0">
-                <table id="table" class="table align-items-center mb-0">
+            <div class="table-responsive p-3">
+                <table id="table" class="table align-items-center mb-0 p-0 m-0">
                     <thead>
                         <tr>
-                            <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Nome</th>
-                            <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Código de Compra</th>
-                            <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Preço de Compra</th>
-                            <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Código de Venda</th>
-                            <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Preço de Venda</th>
-                            <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Marca</th>
-                            <th data-class-name="priority" class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Tipo do Produto</th>
+                            <th class="text-center text-uppercase text-secondary  opacity-7">Nome</th>
+                            <th class="text-center text-uppercase text-secondary  opacity-7 ps-2">Quantity</th>
+                            <th class="text-center text-uppercase text-secondary  opacity-7 ps-2">Número CAS</th>
+                            <th class="text-center text-uppercase text-secondary  opacity-7 ps-2">Preço de Compra</th>
+                            <th class="text-center text-uppercase text-secondary  opacity-7 ps-2">Marca</th>
+                            <th class="text-center text-uppercase text-secondary  opacity-7 ps-2">Código de Venda</th>
+                            <th class="text-center text-uppercase text-secondary  opacity-7 ps-2">Preço de Venda</th>
+                            <th class="text-center text-uppercase text-secondary  opacity-7 ps-2">Tipo do Produto</th>
+                            <th class="text-center text-uppercase text-secondary  opacity-7 ps-2">Fornecedor</th>
                         </tr>
                     </thead>
-                    <tbody>
-                        {% for product in products %}
-                        <tr>
-                            <td>
-                                <div class="text-center">
-                                    <h6 class="mb-0 text-sm">
-                                        {{ product.name }}
-                                    </h6>
-                                </div>
-                            </td>
-                            <td>
-                                <a href="" class="custom-link text-center">
-                                    <div class="d-flex flex-column justify-content-center">
-                                        <div class="mb-0 text-sm">
-                                            {{ product.purch_cod|replace_comma }}
-                                        </div>
-                                    </div>
-                                </a>
-                            </td>
-                            <td>
-                                <div class="text-center">
-                                    <div class="d-flex flex-column">
-                                        <h6 class="mb-0 text-sm">
-                                            {{ product.purch_price|floatformat:2 }}
-                                        </h6>
-                                    </div>
-                                </div>
-                            </td>
-                            <td>
-                                <div class="text-center">
-                                    <div class="d-flex flex-column">
-                                        <h6 class="mb-0 text-sm">
-                                            {{ product.sell_cod|replace_comma }}
-                                        </h6>
-                                    </div>
-                                </div>
-                            </td>
-                            <td>
-                                <div class="text-center">
-                                    <div class="d-flex flex-column">
-                                        <h6 class="mb-0 text-sm">
-                                            {{ product.sell_price|floatformat:2 }}
-                                        </h6>
-                                    </div>
-                                </div>
-                            </td>
-                            <td>
-                                <div class="text-center">
-                                    <div class="d-flex flex-column">
-                                        <h6 class="mb-0 text-sm">
-                                            {{ product.brand }}
-                                        </h6>
-                                    </div>
-                                </div>
-                            </td>
-                            <td>
-                                <div class="text-center">
-                                    <div class="d-flex flex-column">
-                                        <h6 class="mb-0 text-sm">
-                                            {{ product.product_type }}
-                                        </h6>
-                                    </div>
-                                </div>
-                            </td>
-                        </tr>
-                        {% endfor %}
-                    </tbody>
                 </table>
             </div>
         </div>  
@@ -105,7 +40,27 @@
 <script>
 
     $(document).ready( function () {
-        $('#table').DataTable();
+        $('#table').DataTable({
+            "ajax": "/product_json/",
+            "columns": [
+                {"data": "name", 
+                    "render": function(data, type, row, meta) {
+                            return `<a href="#" hx-get="" hx-trigger="click">${data}</a>`;
+                        }, 
+                    "className": "text-center text-uppercase text-seccondary opacity-8"},
+                {"data": "quantity", "className": "text-center text-uppercase text-seccondary opacity-8"},
+                {"data": "cas_number", "className": "text-center text-uppercase text-seccondary opacity-8"},
+                {"data": "purch_price", "className": "text-center text-uppercase text-seccondary opacity-8"},
+                {"data": "brand", "className": "text-center text-uppercase text-seccondary opacity-8"},
+                {"data": "sell_cod", "className": "text-center text-uppercase text-seccondary opacity-8"},
+                {"data": "sell_price", "className": "text-center text-uppercase text-seccondary opacity-8"},
+                {"data": "product_type", "className": "text-center text-uppercase text-seccondary opacity-8"},
+                {"data": "supplier", "className": "text-center text-uppercase text-seccondary opacity-8"},
+            ],
+            "columnDefs": [
+                { "width": "10%", "targets": [0, 1, 2, 3, 4, 5, 6, 7, 8]},
+            ]
+        });
     } );
 
 </script>
