show_product finalizado

--- a/project/templates/material-dashboard/parciais/_head.html
+++ b/project/templates/material-dashboard/parciais/_head.html
@@ -46,3 +46,6 @@
 <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.css" />
   
 <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.js"></script>
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
