--- a/project/templates/product/show.html
+++ b/project/templates/product/show.html
@@ -1,4 +1,7 @@
-{% load filters %}
+
+
+
+
 
 <div class="row my-2">
     <div class="col-12">
@@ -15,15 +18,14 @@
                 </div>
             </div>
         </div>
-        <div class="card-body px-0 pb-2">
+        <div class="card-body px-0 pb-3">
             <div class="table-responsive p-3">
                 <table id="table" class="table align-items-center mb-0 p-0 m-0">
                     <thead>
                         <tr>
                             <th class="text-center text-uppercase text-secondary  opacity-7">Nome</th>
-                            <th class="text-center text-uppercase text-secondary  opacity-7 ps-2">Quantity</th>
+                            <th class="text-center text-uppercase text-secondary  opacity-7 ps-2">Quantidade</th>
                             <th class="text-center text-uppercase text-secondary  opacity-7 ps-2">Número CAS</th>
-                            <th class="text-center text-uppercase text-secondary  opacity-7 ps-2">Preço de Compra</th>
                             <th class="text-center text-uppercase text-secondary  opacity-7 ps-2">Marca</th>
                             <th class="text-center text-uppercase text-secondary  opacity-7 ps-2">Código de Venda</th>
                             <th class="text-center text-uppercase text-secondary  opacity-7 ps-2">Preço de Venda</th>
@@ -44,21 +46,26 @@
             "ajax": "/product_json/",
             "columns": [
                 {"data": "name", 
-                    "render": function(data, type, row, meta) {
+                    "render": (data) => {
                             return `<a href="#" hx-get="" hx-trigger="click">${data}</a>`;
                         }, 
                     "className": "text-center text-uppercase text-seccondary opacity-8"},
                 {"data": "quantity", "className": "text-center text-uppercase text-seccondary opacity-8"},
                 {"data": "cas_number", "className": "text-center text-uppercase text-seccondary opacity-8"},
-                {"data": "purch_price", "className": "text-center text-uppercase text-seccondary opacity-8"},
                 {"data": "brand", "className": "text-center text-uppercase text-seccondary opacity-8"},
                 {"data": "sell_cod", "className": "text-center text-uppercase text-seccondary opacity-8"},
-                {"data": "sell_price", "className": "text-center text-uppercase text-seccondary opacity-8"},
+                {"data": "sell_price", 
+                    "render": (data) => {
+                        data = Math.trunc(data * 100) / 100; 
+                        return data
+                    },
+                    "className": "text-center text-uppercase text-seccondary opacity-8"},
                 {"data": "product_type", "className": "text-center text-uppercase text-seccondary opacity-8"},
                 {"data": "supplier", "className": "text-center text-uppercase text-seccondary opacity-8"},
             ],
             "columnDefs": [
-                { "width": "10%", "targets": [0, 1, 2, 3, 4, 5, 6, 7, 8]},
+                { "width": "2%", "targets": [0, 1, 2, 3, 4, 5, 6]},
+                { "width": "15%", "targets": [7]} 
             ]
         });
     } );
